Fix spacing in the sidebar

--- a/src/styles/components/app/_sidebar.scss
+++ b/src/styles/components/app/_sidebar.scss
@@ -413,7 +413,7 @@
         .items {
           background: transparent;
           box-shadow: none;
-          padding: 1rem 1rem .75rem 3.5rem;
+          padding: .25rem 1rem .75rem 3.5rem;
           position: static;
           width: 100%;
 
